--- a/main.ipynb
+++ b/main.ipynb
@@ -30,228 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-21T08:48:25.801201500Z",
      "start_time": "2023-11-21T08:48:25.791928300Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Afghanistan\n",
-      "Curacao\n",
-      "Albania\n",
-      "Algeria\n",
-      "Andorra\n",
-      "Angola\n",
-      "Antigua\n",
-      "Australia\n",
-      "Argentina\n",
-      "Armenia\n",
-      "Aruba\n",
-      "American Samoa\n",
-      "Austria\n",
-      "Azerbaijan\n",
-      "Bahamas\n",
-      "Bangladesh\n",
-      "Barbados\n",
-      "Burundi\n",
-      "Belgium\n",
-      "Benin\n",
-      "Bermuda\n",
-      "Bhutan\n",
-      "Bosnia and Herzegovina\n",
-      "Belize\n",
-      "Belarus\n",
-      "Czech Republic\n",
-      "Boliva\n",
-      "Botswana\n",
-      "Brazil\n",
-      "Bahrain\n",
-      "Brunei\n",
-      "Bulgaria\n",
-      "Burkina Faso\n",
-      "Central African Republic\n",
-      "Cambodia\n",
-      "Canada\n",
-      "Cayman Islands\n",
-      "Republic of Congo\n",
-      "Chad\n",
-      "Chile\n",
-      "China\n",
-      "Ivory Coast\n",
-      "Cameroon\n",
-      "Democratic Republic of the Congo\n",
-      "Cook Islands\n",
-      "Colombia\n",
-      "Comoros\n",
-      "Cape Verde\n",
-      "Costa Rica\n",
-      "Croatia\n",
-      "Greece\n",
-      "Cuba\n",
-      "Cyprus\n",
-      "Denmark\n",
-      "Djibouti\n",
-      "Dominica\n",
-      "Dominican Republic\n",
-      "Ecuador\n",
-      "Egypt\n",
-      "Eritrea\n",
-      "El Salvador\n",
-      "Spain\n",
-      "Estonia\n",
-      "Ethiopia\n",
-      "Russia\n",
-      "Fiji\n",
-      "Finland\n",
-      "France\n",
-      "Germany\n",
-      "Micronesia\n",
-      "Gabon\n",
-      "Gambia\n",
-      "UK\n",
-      "Guinea-Bissau\n",
-      "Georgia\n",
-      "Equatorial Guinea\n",
-      "Ghana\n",
-      "Grenada\n",
-      "Guatemala\n",
-      "Guinea\n",
-      "Guam\n",
-      "Guyana\n",
-      "Haiti\n",
-      "Honduras\n",
-      "Hungary\n",
-      "Indonesia\n",
-      "India\n",
-      "Iran\n",
-      "Ireland\n",
-      "Iraq\n",
-      "Iceland\n",
-      "Israel\n",
-      "Virgin Islands, US\n",
-      "Italy\n",
-      "Virgin Islands, British\n",
-      "Jamaica\n",
-      "Jordan\n",
-      "Japan\n",
-      "Kazakhstan\n",
-      "Kenya\n",
-      "Kyrgyzstan\n",
-      "Kiribati\n",
-      "South Korea\n",
-      "Kosovo\n",
-      "Saudi Arabia\n",
-      "Kuwait\n",
-      "Laos\n",
-      "Latvia\n",
-      "Libya\n",
-      "Liberia\n",
-      "Saint Lucia\n",
-      "Lesotho\n",
-      "Lebanon\n",
-      "Liechtenstein\n",
-      "Lithuania\n",
-      "Luxembourg\n",
-      "Madagascar\n",
-      "Malaysia\n",
-      "Morocco\n",
-      "Malawi\n",
-      "Moldova\n",
-      "Maldives\n",
-      "Mexico\n",
-      "Mongolia\n",
-      "Marshall Islands\n",
-      "Macedonia\n",
-      "Mali\n",
-      "Malta\n",
-      "Montenegro\n",
-      "Monaco\n",
-      "Mozambique\n",
-      "Mauritius\n",
-      "Mauritania\n",
-      "Myanmar\n",
-      "Namibia\n",
-      "Nicaragua\n",
-      "Netherlands\n",
-      "Nepal\n",
-      "Nigeria\n",
-      "Niger\n",
-      "Norway\n",
-      "Nauru\n",
-      "New Zealand\n",
-      "Oman\n",
-      "Pakistan\n",
-      "Panama\n",
-      "Paraguay\n",
-      "Peru\n",
-      "Philippines\n",
-      "Palestine\n",
-      "Palau\n",
-      "Papua New Guinea\n",
-      "Poland\n",
-      "Portugal\n",
-      "North Korea\n",
-      "Puerto Rico\n",
-      "Qatar\n",
-      "Zimbabwe\n",
-      "nan\n",
-      "Romania\n",
-      "South Africa\n",
-      "Rwanda\n",
-      "Samoa\n",
-      "Serbia\n",
-      "Senegal\n",
-      "Seychelles\n",
-      "Singapore\n",
-      "Saint Kitts\n",
-      "Sierra Leone\n",
-      "Slovenia\n",
-      "San Marino\n",
-      "Solomon Islands\n",
-      "Somalia\n",
-      "Sri Lanka\n",
-      "South Sudan\n",
-      "Sao Tome and Principe\n",
-      "Sudan\n",
-      "Switzerland\n",
-      "Suriname\n",
-      "Slovakia\n",
-      "Sweden\n",
-      "Swaziland\n",
-      "Syria\n",
-      "Tanzania\n",
-      "Tonga\n",
-      "Thailand\n",
-      "Tajikistan\n",
-      "Turkmenistan\n",
-      "Timor-Leste\n",
-      "Togo\n",
-      "Taiwan\n",
-      "Trinidad\n",
-      "Tunisia\n",
-      "Turkey\n",
-      "United Arab Emirates\n",
-      "Uganda\n",
-      "Ukraine\n",
-      "Uruguay\n",
-      "USA\n",
-      "Uzbekistan\n",
-      "Vanuatu\n",
-      "Venezuela\n",
-      "Vietnam\n",
-      "Saint Vincent\n",
-      "Yemen\n",
-      "Zambia\n",
-      "Tuvalu\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Extract unique region names\n",
     "unique_regions = data_noc['region'].unique()\n",
@@ -277,22 +63,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-21T08:48:25.816072Z",
      "start_time": "2023-11-21T08:48:25.797609700Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total number of unique regions: 207\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Filter out excluded regions and count\n",
     "filtered_regions = [\n",
@@ -338,25 +116,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-21T08:48:25.919900100Z",
      "start_time": "2023-11-21T08:48:25.842586400Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Types of medals:\n",
-      "Gold\n",
-      "Bronze\n",
-      "Silver\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "medal_types = data_athletes['Medal'].unique()\n",
     "\n",
@@ -377,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-21T08:48:25.994712400Z",
@@ -412,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-21T08:48:26.080144300Z",
@@ -549,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-21T08:48:26.404192800Z",
@@ -662,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-21T08:48:55.737462500Z",
@@ -820,55 +587,49 @@
   },
   {
    "cell_type": "markdown",
-   "id": "154a7f92",
-   "metadata": {},
-   "source": [
-    "<span style=\"color:red\"><b><<<<<<< local</b></span>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Tug-Of-War\n",
     "\n",
-    "## Medal distribution among countries in Tug-Of-War"
+    "## Medal distribution among countries in Tug-Of-War by years"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Filter for Tug-Of-War\n",
     "tug_of_war_data = data_athletes[data_athletes['Sport'] == 'Tug-Of-War']\n",
     "\n",
-    "# Plot for medal distribution among countries in Tug-Of-War\n",
-    "tug_of_war_medals = tug_of_war_data[tug_of_war_data['Medal'].notna()]\n",
-    "medal_distribution_tug_of_war = tug_of_war_medals['NOC'].value_counts().reset_index()\n",
-    "medal_distribution_tug_of_war.columns = ['NOC', 'Medals']\n",
+    "# Grouping data by year, medal and 'NOC'\n",
+    "# .size() for amount of medals per group\n",
+    "# .reset_index() transforms the result into a new DataFrame column \"Count\" for size of each group\n",
+    "noc_medal_year_data = tug_of_war_data.groupby(['NOC', 'Year', 'Medal']).size().reset_index(name = 'Count')\n",
     "\n",
-    "medal_distribution_tug_of_war = px.bar(\n",
-    "    medal_distribution_tug_of_war.head(10),\n",
-    "    x='NOC', \n",
-    "    y='Medals',\n",
-    "    title='Top 10 Countries in Medal Count for Tug-Of-War',\n",
-    "    labels={\n",
-    "        'NOC': 'National Olympic Committee',\n",
-    "        'Medals': 'Number of Medals'\n",
-    "    }\n",
+    "# Sorting the years chronologically\n",
+    "noc_medal_year_data = noc_medal_year_data.sort_values(by='Year')\n",
+    "\n",
+    "# Facet grid with histograms\n",
+    "medal_distribution_per_year_tug_of_war = px.histogram(\n",
+    "    noc_medal_year_data, \n",
+    "    x=\"NOC\",  \n",
+    "    y=\"Count\",\n",
+    "    color=\"Medal\",\n",
+    "    facet_col=\"Year\",  # Separete grid for each year\n",
+    "    color_discrete_map={\"Gold\": \"gold\", \"Silver\": \"silver\", \"Bronze\": \"#cd7f32\"}, # Colouring the medal bars\n",
+    "    title=\"Medal Distribution Among Countries in Tug-Of-War by Years\",\n",
+    "    labels={'NOC': 'National Olympic Committee', 'Count': 'Number of Medals per team'}\n",
     ")\n",
     "\n",
-    "medal_distribution_tug_of_war.write_html(\"../Projekt_OS_Australien/Visualisering/Medal_distribution_tug_of_war.html\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c99d72b6",
-   "metadata": {},
-   "source": [
-    "<span style=\"color:red\"><b>=======</b></span>"
+    "medal_distribution_per_year_tug_of_war.update_xaxes(tickangle=-90)\n",
+    "\n",
+    "for annotation in medal_distribution_per_year_tug_of_war.layout.annotations:\n",
+    "    annotation.text = annotation.text.split(\"=\")[-1] # Updating each annotation showing only the numerical\n",
+    "\n",
+    "\n",
+    "medal_distribution_per_year_tug_of_war.write_html(\"../Projekt_OS_Australien/Visualisering/Medal_distribution_tug_of_war.html\")"
    ]
   },
   {
@@ -891,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-21T09:17:26.836297500Z",
@@ -899,216 +660,7 @@
     },
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>Medal</th>\n",
-       "      <th>NOC</th>\n",
-       "      <th>Gold</th>\n",
-       "      <th>Silver</th>\n",
-       "      <th>Bronze</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>NOR</td>\n",
-       "      <td>54</td>\n",
-       "      <td>73</td>\n",
-       "      <td>37</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>FIN</td>\n",
-       "      <td>35</td>\n",
-       "      <td>42</td>\n",
-       "      <td>64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>SWE</td>\n",
-       "      <td>54</td>\n",
-       "      <td>30</td>\n",
-       "      <td>39</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>URS</td>\n",
-       "      <td>44</td>\n",
-       "      <td>35</td>\n",
-       "      <td>32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>ITA</td>\n",
-       "      <td>15</td>\n",
-       "      <td>21</td>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>RUS</td>\n",
-       "      <td>23</td>\n",
-       "      <td>14</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>GER</td>\n",
-       "      <td>6</td>\n",
-       "      <td>19</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>SUI</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>CZE</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>EUN</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>TCH</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>GDR</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>EST</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>AUT</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>POL</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>FRA</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>KAZ</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>CAN</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>SLO</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>BUL</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>USA</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Medal  NOC  Gold  Silver  Bronze\n",
-       "12     NOR    54      73      37\n",
-       "6      FIN    35      42      64\n",
-       "17     SWE    54      30      39\n",
-       "19     URS    44      35      32\n",
-       "10     ITA    15      21      25\n",
-       "14     RUS    23      14      12\n",
-       "9      GER     6      19      10\n",
-       "16     SUI     3       0      10\n",
-       "3      CZE     1       5       6\n",
-       "5      EUN     6       2       4\n",
-       "18     TCH     0       4       7\n",
-       "8      GDR     5       1       4\n",
-       "4      EST     4       2       1\n",
-       "0      AUT     1       2       2\n",
-       "13     POL     2       1       2\n",
-       "7      FRA     0       1       4\n",
-       "11     KAZ     1       2       1\n",
-       "2      CAN     2       2       0\n",
-       "15     SLO     0       0       2\n",
-       "1      BUL     0       0       1\n",
-       "20     USA     0       1       0"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Making new dataframe only containing cross country skiers\n",
     "# Grouping by NOC and amount of medals\n",
@@ -1123,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-21T09:23:33.442818300Z",
@@ -1158,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-21T09:46:58.794123900Z",
@@ -1177,23 +729,6 @@
     "    bargap=0.2\n",
     ")\n",
     "cross_country_skiers_age_diagram.write_html(\"../Projekt_OS_Australien/Visualisering/Cross_country_skiers_age.html\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0c2b0e1e",
-   "metadata": {},
-   "source": [
-    "<span style=\"color:red\"><b>>>>>>>> remote</b></span>"
    ]
   }
  ],
